--- a/backend/package.json
+++ b/backend/package.json
@@ -13,17 +13,19 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.3",
     "ws": "^8.18.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15",
+    "@shelf/jest-mongodb": "^4.3.2",
     "jest": "^29.7.0",
-    "supertest": "^7.0.0",
     "mongodb-memory-server": "^9.4.0",
-    "@shelf/jest-mongodb": "^4.3.2"
+    "nodemon": "^2.0.15",
+    "supertest": "^7.0.0"
   }
 }
