fix:  resolve docker networking and finalize backend-db handshake.  feat: fix docker orchestration and mongodb connectivity
- Updated docker-compose.yml to fix duplicate keys and service discovery - Resolved ENOTFOUND error by aligning backend MONGO_URI with db service name - Updated backend to bind to 0.0.0.0 for external access - Added initial seed script for bookstore inventory

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,55 +1,55 @@
 services:
-  # 1. MongoDB Database
-  mongodb:
+  eq_mongodb:
     image: mongo:latest
-    container_name: mongodb
-    restart: always
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: admin
-      MONGO_INITDB_ROOT_PASSWORD: secret
+    container_name: eq_mongodb
     ports:
       - "27017:27017"
     volumes:
       - mongo-data:/data/db
+    networks:
+      - app-network
 
-  # 2. Backend API
   backend:
     build: ./backend
-    container_name: backend
-    restart: always
+    container_name: eq_backend
     ports:
       - "5000:5000"
     environment:
-      # Notice we use 'mongodb' (service name) instead of 'localhost'
-      MONGO_URI: mongodb://admin:secret@mongodb:27017/enchanted_quill?authSource=admin
-      PORT: 5000
+      - MONGO_URI=mongodb://eq_mongodb:27017/bookstore_db
+      - PORT=5000
+      - JWT_SECRET=YourSuperSecretKey123!
     depends_on:
-      - mongodb
+      - eq_mongodb
+    networks:
+      - app-network
 
-  # 3. Frontend React App
-  frontend:
-    build: ./frontend
-    container_name: frontend
-    ports:
-      - "3000:3000"
-    environment:
-      - WDS_SOCKET_PORT=0
-      - REACT_APP_API_URL=http://backend:5000/api/books
-    stdin_open: true # Needed for React scripts
-    tty: true        # Needed for React scripts
-    depends_on:
-      - backend
-
-  # 4. Frontend Consumer App
   frontend-consumer:
     build: ./frontend-consumer
-    container_name: frontend-consumer
+    container_name: eq_frontend
     ports:
-      - "5173:5173"
+      - "3000:5173"
     environment:
-      - VITE_REACT_APP_API_URL=http://backend:5000/api/books
+      - VITE_REACT_APP_API_URL=http://localhost:5000/api
     depends_on:
       - backend
+    networks:
+      - app-network
+
+  frontend:
+    build: ./frontend
+    container_name: eq_admin
+    ports:
+      - "3001:80"
+    environment:
+      - VITE_REACT_APP_API_URL=http://localhost:5000/api
+    depends_on:
+      - backend
+    networks:
+      - app-network
+
+networks:
+  app-network:
+    driver: bridge
 
 volumes:
   mongo-data:
